# Unitree-Go2-VLM

./: .gitignore  .gitmodules  README.md  requirements.txt  vlm_client.py
go2_controller/: package.xml  setup.cfg  setup.py
go2_controller/go2_controller/: go2_controller_node.py  move_service_node.py
go2_controller/launch/: controller.launch.py
go2_phone_mic/: package.xml  setup.cfg  setup.py
go2_phone_mic/go2_phone_mic/: phone_mic_node.py
go2_phone_mic/go2_phone_mic/static/: index.html  processor.js
go2_phone_mic/launch/: phone_mic.launch.py
go2_speech_generation/: package.xml  setup.cfg  setup.py
go2_speech_generation/go2_speech_generation/: speech_playback_node.py
go2_speech_recognition/: package.xml  setup.cfg  setup.py
go2_speech_recognition/go2_speech_recognition/: name_spotting.py  speech_recognition_node.py  speech_to_text.py  text_to_speech.py  voice_activity_detector.py
go2_vlm_core/: package.xml  setup.cfg  setup.py
go2_vlm_core/go2_vlm_core/: command_parser.py  user_input_node.py  vlm_client.py  vlm_core_node.py
go2_vlm_core/launch/: vlm_core.launch.py
